--- a/main/assets/css/custom-style/_typography.scss
+++ b/main/assets/css/custom-style/_typography.scss
@@ -38,6 +38,14 @@ h1, h2, h3, h4 {
   font-weight: 500;
 }
 
+h2 {
+  letter-spacing: 2px;
+}
+
+h3 {
+  letter-spacing: 5px;
+}
+
 // font family
 .font-primary { font-family: var(--font-primary); }
 
