--- a/main/assets/css/custom-style/_buttons.scss
+++ b/main/assets/css/custom-style/_buttons.scss
@@ -1,31 +1,27 @@
-// --------------------------------
-
-// (START) Global editor code https://codyhouse.co/ds/globals/buttons
-
-// --------------------------------
-
 :root {
-  --btn-padding-y: var(--space-xxs); // padding top/bottom
-  --btn-padding-x: var(--space-sm); // padding left/right
-  --btn-radius: 0.25em; // border radius
-  --btn-font-size: 1em; // font size
+  --btn-font-size: 1em;
+  --btn-padding-x: var(--space-md);
+  --btn-padding-y: var(--space-sm);
+  --btn-radius: 0.5em;
 }
 
-.btn { // style affecting all buttons
+.btn {
+  background: var(--color-white);
+  cursor: pointer;
+  text-transform: uppercase;
+  text-decoration: none;
   line-height: 1.2;
+  @include fontSmooth;
   box-shadow: var(--shadow-xs);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  transition: .2s;
-  
+  transition: all 0.2s ease;
+
   &:hover {
-    cursor: pointer;
     box-shadow: var(--shadow-sm);
   }
 
   &:focus {
-    outline: none;
     box-shadow: 0px 0px 0px 2px alpha(var(--color-contrast-higher), 0.15);
+    outline: none;
   }
 
   &:active {
@@ -35,11 +31,11 @@
 
 // themes
 .btn--primary {
-  background-color: var(--color-primary);
+  background: var(--color-primary);
   color: var(--color-white);
 
   &:hover {
-    background-color: var(--color-primary-dark);
+    background: var(--color-primary-light);
   }
 
   &:focus {
@@ -48,16 +44,21 @@
 }
 
 .btn--subtle {
-  background-color: var(--color-contrast-lower);
+  background: var(--color-white);
   color: var(--color-contrast-higher);
+
+  &:hover {
+    background: var(--color-primary-light);
+    color: var(--color-white);
+  }
 }
 
 .btn--accent {
-  background-color: var(--color-accent);
+  background: var(--color-accent);
   color: var(--color-white);
 
   &:hover {
-    background-color: var(--color-accent-dark);
+    background: var(--color-accent-dark);
   }
 
   &:focus {
@@ -66,14 +67,12 @@
 }
 
 // feedback
-.btn--disabled,
-.btn[disabled], 
-.btn[readonly] {
+.btn--disabled, .btn[disabled], .btn[readonly] {
   opacity: 0.6;
   cursor: not-allowed;
 }
 
-// sizes
+// size
 .btn--sm {
   font-size: 0.8em;
 }
@@ -85,9 +84,3 @@
 .btn--lg {
   font-size: 1.4em;
 }
-
-// --------------------------------
-
-// (END) Global editor code
-
-// --------------------------------
