set max-width of all items

--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -2,3 +2,8 @@
   // radius
   --radius: 0.9375em; // border radius base size
 }
+
+body > * {
+  background-color: var(--color-white);
+  max-width: var(--max-width-xl); //1440px
+}
