--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -8,3 +8,12 @@ a, .link {
     text-decoration: underline;
   }
 }
+
+.container.container--outer {
+  max-width: var(--max-width-xl);
+  --component-padding: 0;
+}
+
+.container {
+  --component-padding: 10.3125rem;
+}
