use new color property name for font color

--- a/main/assets/css/custom-style/_typography.scss
+++ b/main/assets/css/custom-style/_typography.scss
@@ -31,7 +31,7 @@
 
 body {
   font-family: var(--font-primary);
-  color: var(--color-black-light);
+  color: var(--color-black-lighter);
 }
 
 h1, h2, h3, h4 {
