--- a/main/assets/css/components/_navigation.scss
+++ b/main/assets/css/components/_navigation.scss
@@ -26,6 +26,20 @@
     visibility: hidden;
     opacity: 0;
     li a {font-size: 1.5rem;}
+    @include breakpoint(sm) {
+      visibility: visible;
+      opacity: 1;
+      background: inherit;
+      position: static;
+      grid-auto-flow: column;
+      gap: var(--space-md);
+      width: auto;
+      padding: 0;
+      li a {
+        font-size: initial;
+        color: initial;
+      }
+    }
   }
 }
 
@@ -43,4 +57,8 @@
     .nav__icon--open {display: none;}
     .nav__icon--close {display: block;}
   }
+  @include breakpoint(sm) {
+    &__icon {display: none;}
+  }
 }
+
