--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -1,13 +1,16 @@
-
-.nav {
-  background: pink;
-}
-
 .header__wrapper {
   background: turquoise;
   width: 100%;
   position: fixed;
   z-index: var(--zindex-header);
+  margin: 0 auto;
+  @include breakpoint(sm) {
+    position: static;
+  }
+}
+
+.nav {
+  background: pink;
 }
 
 .hero {
@@ -15,13 +18,19 @@
   .container {
   background: red;
   padding-top: var(--space-xl);
-    --component-padding: 0;
-    @include breakpoint(sm) {--component-padding: var(--space-xl);}
-    @include breakpoint(lg) {--component-padding: var(--space-xxl);}
-    @include breakpoint(xl) {--component-padding: 10.3125rem;}
-    z-index: 0;
+  --component-padding: 0; //removes padding on sides
   }
+
   .article {
-   padding: var(--component-padding);
+   padding: var(--component-padding); //aligns text vertically
+  }
+
+  @include breakpoint(sm) {
+    padding-top: 0;
+    .container {--component-padding: var(--space-xl);}
+    }
+
+  @include breakpoint(lg) {
+    .container {--component-padding: var(--space-xxl);}
   }
 }
