--- a/main/assets/css/components/_navigation.scss
+++ b/main/assets/css/components/_navigation.scss
@@ -4,8 +4,9 @@
 .nav {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  height: var(--nav-height);
+  min-height: var(--nav-height);
 
   &__logo {
     max-width: 12.625rem;
@@ -15,26 +16,19 @@
   &__list {
     background: var(--color-black-light);
     color: var(--color-white);
-    position: absolute;
-    top: var(--nav-height);
-    left: 0;
     display: grid;
      gap: var(--space-lg);
-    width: 100%;
     padding: var(--space-xl) var(--component-padding);
-    transition: all .4s ease-in-out;
-    visibility: hidden;
-    opacity: 0;
-    li a {font-size: 1.5rem;}
-    @include breakpoint(sm) {
-      visibility: visible;
-      opacity: 1;
-      background: inherit;
-      position: static;
+
+  }
+
+  @include breakpoint(sm) {
+    flex-direction: row;
+    .nav__icon {display: none;}
+    &__list {
       grid-auto-flow: column;
       gap: var(--space-md);
-      width: auto;
-      padding: 0;
+     padding: 0;
       li a {
         font-size: initial;
         color: initial;
@@ -43,13 +37,27 @@
   }
 }
 
-//  ++++++++++++++++
-//  + nav control +
-//  ++++++++++++++++
-
-.nav {
-  &__icon--close {display: none;}
-  &__icon { cursor: pointer;}
+.nav.fixed {
+  flex-direction: row;
+  .nav__list {
+    position: absolute;
+    top: var(--nav-height);
+    left: 0;
+    transition: all .4s ease-in-out;
+    visibility: hidden;
+    opacity: 0;
+    width: 100%;
+    li a {font-size: 1.5rem;}
+    @include breakpoint(sm) {
+     visibility: visible;
+      opacity: 1;
+      width: auto;
+      background: inherit;
+      position: static;
+    }
+  }
+  .nav__icon--close {display: none;}
+  .nav__icon { cursor: pointer;}
   &.open {
     .nav__list {
       visibility: visible;
@@ -58,8 +66,8 @@
     .nav__icon--open {display: none;}
     .nav__icon--close {display: block;}
   }
-  @include breakpoint(sm) {
-    &__icon {display: none;}
-  }
 }
+
+
+
 
