--- a/main/assets/css/custom-style/_shared-styles.scss
+++ b/main/assets/css/custom-style/_shared-styles.scss
@@ -1,6 +1,11 @@
 :root {
-  // radius
   --radius: 0.9375em; // border radius base size
+}
+
+.container--outer {
+  max-width: 90rem;
+  display: grid; //avoids margin collapsing
+  grid-template-columns: 1fr;
 }
 
 .container {
