--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -1,36 +1,23 @@
 .navigation {
-  background: turquoise;
   width: 100%;
   position: fixed;
   z-index: var(--zindex-header);
   margin: 0 auto;
-  @include breakpoint(sm) {
-    position: static;
-  }
+  @include breakpoint(sm) {position: static;}
 }
 
-.nav {
-  background: pink;
-}
 
-.hero {
-  padding-top: var(--nav-height);
+header {
+  margin-top: var(--nav-height); //move content down for fixed menu
+  background-color: red; //so bg colour appears to take up full width
+
   .container {
-  background: red;
-  padding-top: var(--space-xl);
-  --component-padding: 0; //removes padding on sides
-  }
-
-  .article {
-   padding: var(--component-padding); //aligns text vertically
+    background: red;
   }
 
   @include breakpoint(sm) {
-    padding-top: 0;
-    .container {--component-padding: var(--space-xl);}
+    background-color: initial;
+    margin-top: initial;
     }
 
-  @include breakpoint(lg) {
-    .container {--component-padding: var(--space-xxl);}
-  }
 }
