--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -16,32 +16,58 @@ header {
    background-color: var(--color-primary);
   }
 
-
-
-  @include breakpoint(md) {
+  @include breakpoint(sm) {
     background-color: initial;
     margin-top: initial;
     .hero {
+      text-align: center;
       border-radius: var(--radius);
       display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-template-rows: var(--space-xxxl) 1fr var(--space-xxxl)
-    }
+      grid-template-columns: 0.15fr 1fr 0.15fr;
+      grid-template-rows: repeat(12, 1fr);
 
-    .hero__image {
-      background: url(../images/home/desktop/image-hero-phone.png) no-repeat;
-      background-position: left 80px top -10px;
-      background-size: cover;
-      grid-row: 1 / -1;
-      grid-column: 6 / -1;
-    }
+      &__article {
+        --text-vspace-multiplier: 1.8;
+        grid-column: 2 / span 1;
+        grid-row: 2 / 7 ;
+        display: grid;
+        justify-items: center;
+        justify-content: center;
+        h1 { max-width: 20ch}
+        p {max-width: 45ch;}
+      }
 
+      &__image {
+        background: url(../images/home/desktop/image-hero-phone.png) no-repeat;
+        background-size: cover;
+        grid-column: 2;
+        grid-row: 6/ -1;
+        width: 100%;
+        max-width: 32.85rem;
+        justify-self: center;
+      }
+    }
+  }
+
+  @include breakpoint(md) {
     .hero {
-      .article.text-component {
+      border-radius: var(--radius);
+      grid-template-columns: repeat(12, 1fr);
+      grid-template-rows: 0.333fr 1fr 0.333fr;
+
+      &__image {
+        background-position: left top -3em;
+        background-size: cover;
+        grid-row: 1 / -1;
+        grid-column: 8 / span 8;
+        min-width: 35rem;
+      }
+
+      &__article {
+        justify-items: start;
         --text-vspace-multiplier: 1.8;
         grid-row: 2 / 3;
-        grid-column: 2 / span 6;
-        p {max-width: 45ch;}
+        grid-column: 2 / span 7;
       }
     }
   }
