--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -15,13 +15,28 @@ header {
   .hero {
    background-color: var(--color-primary);
    height: 843px;
+   display: grid;
+    grid-template-columns: 0.15fr 1fr 0.15fr;
+   justify-content: center;
+    grid-template-rows: 3.75rem repeat(18, 1fr);
+
+    &__article {
+      --text-vspace-multiplier: 1.8;
+      grid-column: 2 / span 1;
+      grid-row: 2 / 10 ;
+      display: grid;
+      justify-items: center;
+      justify-content: center;
+      h1 { max-width: 20ch}
+      p {max-width: 45ch;}
+    }
+
   }
 
   @include breakpoint(sm) {
     background-color: initial;
     margin-top: initial;
     .hero {
-      text-align: center;
       border-radius: var(--radius);
       display: grid;
       grid-template-columns: 0.15fr 1fr 0.15fr;
