--- a/main/assets/css/custom-style/_buttons.scss
+++ b/main/assets/css/custom-style/_buttons.scss
@@ -1,7 +1,7 @@
 :root {
   --btn-font-size: 1em;
   --btn-padding-x: var(--space-md);
-  --btn-padding-y: var(--space-sm);
+  --btn-padding-y: var(--space-unit);
   --btn-radius: 0.5em;
 }
 
