--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -9,8 +9,9 @@
 
 header {
   margin-top: var(--nav-height); //move content down for fixed menu
-  background-color: var(--color-primary); //so bg colour appears to take up full width
+  // background-color: var(--color-primary); //so bg colour appears to take up full width
   color: var(--color-white);
+  .container {--component-padding: 0;} //makes the hero span the full width;
 
   .hero {
    background-color: var(--color-primary);
@@ -19,16 +20,17 @@ header {
     grid-template-columns: 0.15fr 1fr 0.15fr;
    justify-content: center;
     grid-template-rows: 3.75rem repeat(18, 1fr);
+    align-items: start;
 
     &__article {
-      --text-vspace-multiplier: 1.8;
+      --text-vspace-multiplier: 3;
       grid-column: 2 / span 1;
       grid-row: 2 / 10 ;
       display: grid;
       justify-items: center;
       justify-content: center;
       h1 { max-width: 20ch}
-      p {max-width: 45ch;}
+      p {max-width: 35ch;}
     }
 
   }
