--- a/main/assets/css/custom-style/_buttons.scss
+++ b/main/assets/css/custom-style/_buttons.scss
@@ -1,6 +1,6 @@
 :root {
   --btn-font-size: 1em;
-  --btn-padding-x: var(--space-md);
+  --btn-padding-x: var(--space-lg);
   --btn-padding-y: var(--space-unit);
   --btn-radius: 0.5em;
 }
