--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -3,13 +3,13 @@
   position: fixed;
   z-index: var(--zindex-header);
   margin: 0 auto;
+  background: var(--color-white);
   @include breakpoint(sm) {position: static;}
 }
 
 
 header {
   margin-top: var(--nav-height); //move content down for fixed menu
-  // background-color: var(--color-primary); //so bg colour appears to take up full width
   color: var(--color-white);
   .container {--component-padding: 0;} //makes the hero span the full width;
 
