--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -56,18 +56,23 @@ header {
     margin-top: initial; //remove margin used for menu when menu was fixed;
 
     .hero {
+      background: url(../images/home/desktop/bg-pattern-hero-home.svg) no-repeat, var(--color-primary);
+      background-position: right -7.5rem top 6.25rem;
+      background-size: 90%;
       width: 100%;
       border-radius: var(--radius);
 
       &__article {
          --text-vspace-multiplier: 1.8; //controls the vertical rhythm
-        p {max-width: 45ch;}
+        p {max-width: 46ch;}
       }
     }
   }
 
   @include breakpoint(md) {
     .hero {
+      background-position: right top;
+      background-size: 55%;
       height: 40rem;
       border-radius: var(--radius);
       grid-template-columns: 6rem repeat(12, 1fr) 6rem;
