--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -18,14 +18,15 @@
 header {
   margin-top: var(--nav-height); //move content down for fixed menu
   color: var(--color-white);
-  .container {--component-padding: 0;} //makes the hero span the full width;
+  .container {
+    width: 100vw;
+  }
 
   .hero {
     background: url(../images/home/desktop/bg-pattern-hero-home.svg) no-repeat, var(--color-primary);
     background-position: left top 5.5rem;
     background-size: 180%;
     height: 52.68rem;
-    width: 100vw; //restricts overflow from image
     overflow: hidden;
     display: grid;
     grid-template-columns: 1fr;
@@ -36,7 +37,7 @@ header {
     &__article {
       --text-vspace-multiplier: 2.5; //controls the vertical rhythm
       grid-column: 1;
-      grid-row: 2 / 4 ;
+      grid-row: 2 / span 2 ;
       align-self: start;
       display: grid;
       justify-items: center;
@@ -45,8 +46,6 @@ header {
     }
 
     &__image {
-      background: url(../images/home/desktop/image-hero-phone.png) no-repeat;
-      background-size: cover;
       grid-column: 1;
       grid-row: 5 / -1;
       width: 39.25rem;
@@ -54,7 +53,7 @@ header {
   }
 
   @include breakpoint(sm) {
-    .container {--component-padding: var(--space-xl);} //match container padding of site
+    .container {width: 100% }
     margin-top: initial; //remove margin used for menu when menu was fixed;
 
     .hero {
@@ -84,18 +83,16 @@ header {
         grid-row: 2 / 3;
         grid-column: 2 / span 8;
         justify-items: start;
-        --text-vspace-multiplier: 1.8;
       }
 
       &__image {
-        background-position: left  top -1.6rem;
         grid-row: 1 / -1;
-        grid-column: 9 / span 8;
+        grid-column: 9 / span 6;
+        img {
+          object-position: 8px -27px;
+        }
       }
     }
   }
 
-  @include breakpoint(lg) {
-     .container {--component-padding: var(--space-xxl);}
-  }
 }
