--- a/main/assets/css/components/_navigation.scss
+++ b/main/assets/css/components/_navigation.scss
@@ -1,12 +1,14 @@
 :root {
   --nav-height: calc(2.5 * var(--space-xl));
 }
+
 .nav {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
   min-height: var(--nav-height);
+  width: 100%;
 
   &__logo {
     max-width: 12.625rem;
