--- a/main/assets/css/custom-style/_spacing.scss
+++ b/main/assets/css/custom-style/_spacing.scss
@@ -14,43 +14,41 @@
   --space-xxl: calc(3.375 * var(--space-unit));
   --space-xxxl: calc(5.063 * var(--space-unit));
   --space-xxxxl: calc(7.59 * var(--space-unit));
-  --component-padding: var(--space-md);
+  // --component-padding: var(--space-md);
+  --component-padding: 5vw;
 }
 
-@supports(--css: variables) {
-  @include breakpoint(sm) {
-    :root {
-      --space-unit: 1.2em;
-    }
-    :root, * {
-      --component-padding: var(--space-xl);
-    }
+@include breakpoint(sm) {
+
+  :root {
+    --space-unit: 1.33em;
   }
 
-  @include breakpoint(lg) {
-    :root {
-      --space-unit: 1.33em;
-    }
-
-    :root, * {
-      --space-xxxxs: calc(0.09 * var(--space-unit));
-      --space-xxxs: calc(0.146 * var(--space-unit));
-      --space-xxs: calc(0.236 * var(--space-unit));
-      --space-xs: calc(0.382 * var(--space-unit));
-      --space-sm: calc(0.618 * var(--space-unit));
-      --space-md: calc(1 * var(--space-unit));
-      --space-lg: calc(1.618 * var(--space-unit));
-      --space-xl: calc(2.618 * var(--space-unit));
-      --space-xxl: calc(4.236 * var(--space-unit));
-      --space-xxxl: calc(6.854 * var(--space-unit));
-      --space-xxxxl: calc(11.08 * var(--space-unit));
-      --component-padding: var(--space-xxl);
-    }
+  :root, * {
+    --space-xxxxs: calc(0.09 * var(--space-unit));
+    --space-xxxs: calc(0.146 * var(--space-unit));
+    --space-xxs: calc(0.236 * var(--space-unit));
+    --space-xs: calc(0.382 * var(--space-unit));
+    --space-sm: calc(0.618 * var(--space-unit));
+    --space-md: calc(1 * var(--space-unit));
+    --space-lg: calc(1.618 * var(--space-unit));
+    --space-xl: calc(2.618 * var(--space-unit));
+    --space-xxl: calc(4.236 * var(--space-unit));
+    --space-xxxl: calc(6.854 * var(--space-unit));
+    --space-xxxxl: calc(11.08 * var(--space-unit));
+    // --component-padding: var(--space-xl);
   }
+}
 
-  @include breakpoint(xl) {
-    :root, * {
-      --component-padding: 10.3125rem;
-    }
+@include breakpoint(md) {
+  :root, * {
+    // --component-padding: var(--space-xxl);
+    --component-padding: 9vw;
+  }
+}
+
+@include breakpoint(lg) {
+  :root, * {
+    // --component-padding: var(--space-xxxl);
   }
 }
