--- a/main/assets/css/components/_navigation.scss
+++ b/main/assets/css/components/_navigation.scss
@@ -2,13 +2,16 @@
   --nav-height: calc(2.5 * var(--space-xl));
 }
 
+.navigation {
+  background: var(--bg, var(--color-white));
+}
+
 .nav {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
   min-height: var(--nav-height);
-  width: 100%;
 
   &__logo {
     max-width: 12.625rem;
@@ -16,7 +19,7 @@
   }
 
   &__list {
-    background: var(--color-black-light);
+    background: var(--bg, var(--color-black-light));
     color: var(--fg, var(--color-white));
     display: grid;
      gap: var(--space-lg);
@@ -34,8 +37,21 @@
   }
 }
 
+// ++++++++++++++++++++++
+// ++ FIXED NAVIGATION ++
+// ++++++++++++++++++++++
+
+.navigation.fixed {
+  position: fixed;
+  min-width: 100%;
+  z-index: var(--zindex-header); //keep menu on top of all other content
+  @include breakpoint(sm) {
+    position: static;
+  }
+}
+
 .nav.fixed {
-  flex-direction: row;
+   flex-direction: row;
   .nav__list {
     position: absolute;
     top: var(--nav-height);
@@ -44,32 +60,50 @@
     opacity: 0;
     width: 100%;
      transition: all .4s ease-in-out;
-    li a {font-size: 1.5rem;}
+    a {
+      font-size: 1.5rem;
+    }
     @include breakpoint(sm) {
      visibility: visible;
       opacity: 1;
       width: auto;
       background: inherit;
       position: static;
-      li a {
+      a {
         font-size: initial;
         color: initial;
       }
     }
   }
 
-  .nav__icon { cursor: pointer;}
-  .nav__icon--close {display: none;}
-  &.open {
-    .nav__list {
-      visibility: visible;
-      opacity: 1;
-    }
-    .nav__icon--open {display: none;}
-    .nav__icon--close {display: inline-block;}
+  &.open .nav__list {
+    visibility: visible;
+    opacity: 1;
   }
 }
 
+  // ++++++++++++++++++
+  // ++ Icon Control ++
+  // ++++++++++++++++++
 
+.nav.fixed {
 
+  .nav__icon {
+    cursor: pointer;
+  }
 
+  .nav__icon--close {
+    display: none;
+  }
+
+  &.open {
+
+    .nav__icon--open {
+      display: none;
+    }
+
+    .nav__icon--close {
+      display: inline-block;
+    }
+  }
+}
