--- a/main/assets/css/components/_image_card.scss
+++ b/main/assets/css/components/_image_card.scss
@@ -1,30 +1,17 @@
-.image-cards {
-  height: 640px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-areas:
-    'web app'
-    'web design';
-  gap: 30px;
-
-  }
 
 .image-card {
   border-radius: var(--radius);
   color: var(--color-white);
-  background: var(--card-bg-image) no-repeat;
+  background: var(--card-bg-image) no-repeat, transparent;
   background-size: cover;
-  background-color: transparent;
   background-blend-mode: screen;
   display: grid;
   place-items: center;
   text-align: center;
   text-transform: uppercase;
-  position: relative;
   transition: all 0.4s;
 
-  &:hover{
+  &:hover {
     background-color: var(--color-primary);
   }
 
@@ -35,9 +22,7 @@
   &__cta {
     display: grid;
     align-items: center;
-    grid-template-columns: auto auto;
-    align-items: center;
-    justify-items: center;
+    grid-template-columns: repeat(2, auto);
     gap: var(--space-sm);
   }
 
@@ -46,27 +31,5 @@
     letter-spacing: 5px;
     justify-self: end;
   }
-
- .cta__icon {
-   justify-self: start;
- }
-
-
-
 }
 
-
-#image-card-web {
-  --card-bg-image: url(../images/home/desktop/image-web-design-large.jpg);
-  grid-area: web;
-}
-
-#image-card-app {
-  --card-bg-image: url(../images/home/desktop/image-app-design.jpg);
-  grid-area: app;
-}
-
-#image-card-design {
-  --card-bg-image: url(../images/home/desktop/image-graphic-design.jpg);
-  grid-area: design;
-}
