--- a/main/assets/css/components/_icon_card.scss
+++ b/main/assets/css/components/_icon_card.scss
@@ -1,8 +1,27 @@
+  // ++++++++++++++++++++
+// ++ ICON CARDS ++
+// ++++++++++++++++++++
+
+  .icon-cards {
+    display: grid;
+    grid-auto-flow: column;
+    gap: var(--space-lg);
+  }
+
 .icon-card {
-  --text-vspace-multiplier: 2;
   text-align: center;
   display: grid;
-  gap: 2rem;
+  gap: var(--space-lg);
+
+  .text-component {
+    --text-vspace-multiplier: 2;
+  }
+
+  &__icon {
+    background: url(../images/home/desktop/bg-pattern-hero-home.svg) no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
 
   &__title {
     text-transform: uppercase;
