--- a/main/assets/css/components/_image_card.scss
+++ b/main/assets/css/components/_image_card.scss
@@ -1,18 +1,33 @@
+.image-card,
+.image-card::before {
+  border-radius: var(--radius);
+}
 
 .image-card {
-  border-radius: var(--radius);
   color: var(--color-white);
-  background: var(--card-bg-image) no-repeat, transparent;
+  background:  var(--card-bg-image) no-repeat;
   background-size: cover;
-  background-blend-mode: screen;
   display: grid;
   place-items: center;
   text-align: center;
   text-transform: uppercase;
-  transition: all 0.4s;
+  position: relative;
 
-  &:hover {
-    background-color: var(--color-primary);
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: alpha(var(--color-black-light), 0.7);
+    transition: all 0.4s;
+  }
+
+  &__body {
+     z-index: var(--zindex-overlay);
+  }
+
+  &:hover::before {
+    background: alpha(var(--color-primary), 0.7);
   }
 
   &__title {
