--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -101,12 +101,16 @@ main {
 .image-cards {
   display: grid;
   grid-auto-columns: 1fr;
-  grid-auto-rows: 12.5rem;
+  grid-auto-rows: 15.625rem;
   grid-template-areas:
     'web'
     'app'
     'design';
   gap: 24px;
+
+  @include breakpoint(sm) {
+     grid-auto-rows: 12.5rem;
+  }
 
   @include breakpoint(md) {
     grid-auto-columns: 1fr;
