add details for responsive images

--- a/main/assets/css/components/_image_card.scss
+++ b/main/assets/css/components/_image_card.scss
@@ -38,7 +38,7 @@
     display: grid;
     align-items: center;
     grid-template-columns: repeat(2, auto);
-    gap: var(--space-sm);
+    gap: var(--space-md);
   }
 
   &__text {
