--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -94,56 +94,79 @@ main {
   gap: var(--space-xxxl);
 }
 
-// +++++++++++++++++
-// ++ IMAGE CARDS ++
-// +++++++++++++++++
+// ++++++++++++++++++++++++++
+// ++ DESIGN - IMAGE CARDS ++
+// ++++++++++++++++++++++++++
 
-.image-cards {
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-auto-rows: 15.625rem;
-  grid-template-areas:
-    'web'
-    'app'
-    'design';
-  gap: 24px;
+.design {
 
-  @include breakpoint(sm) {
-     grid-auto-rows: 12.5rem;
-  }
-
-  @include breakpoint(md) {
+  .image-cards {
+    display: grid;
     grid-auto-columns: 1fr;
-    grid-template-rows: repeat(2, 19.25rem);
+    grid-auto-rows: 15.625rem;
     grid-template-areas:
-      'web app'
-      'web design';
-    gap: 30px;
-  }
-
-
-  #image-card-web {
-    --card-bg-image: url(../images/home/desktop/image-web-design-small.jpg);
-    background-position: right -75px bottom;
-    background-size: 250%;
-    grid-area: web;
+      'web'
+      'app'
+      'design';
+    gap: 24px;
 
     @include breakpoint(sm) {
-      --card-bg-image: url(../images/home/desktop/image-web-design-large.jpg);
-      background-position: center bottom;
+      grid-auto-rows: 12.5rem;
+    }
+
+    @include breakpoint(md) {
+      grid-auto-columns: 1fr;
+      grid-template-rows: repeat(2, 19.25rem);
+      grid-template-areas:
+        'web app'
+        'web design';
+      gap: 30px;
+    }
+
+
+    #image-card-web {
+      --card-bg-image: url(../images/home/desktop/image-web-design-small.jpg);
+      background-position: right -75px bottom;
+      background-size: 250%;
+      grid-area: web;
+
+      @include breakpoint(sm) {
+        background-position: left bottom;
+        background-size: cover;
+      }
+
+      @include breakpoint(md) {
+        --card-bg-image: url(../images/home/desktop/image-web-design-large.jpg);
+        background-position: center center;
+      }
+    }
+
+    #image-card-app {
+      --card-bg-image: url(../images/home/desktop/image-app-design.jpg);
+      background-position: right -100px center;
+      background-size: 180%;
+      grid-area: app;
+
+      @include breakpoint(sm) {
+        background-position: center center;
+        background-size: cover;
+      }
+    }
+
+    #image-card-design {
+      --card-bg-image: url(../images/home/desktop/image-graphic-design.jpg);
+      background-position: left top;
+      background-size: 150%;
+      grid-area: design;
+
+      @include breakpoint(sm) {
+        background-position: left top;
+        background-size: cover;
+      }
     }
   }
-
-  #image-card-app {
-    --card-bg-image: url(../images/home/desktop/image-app-design.jpg);
-    grid-area: app;
-  }
-
-  #image-card-design {
-    --card-bg-image: url(../images/home/desktop/image-graphic-design.jpg);
-    grid-area: design;
-  }
 }
+
 
 
 
