completed mobile image cards

--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -94,9 +94,9 @@ main {
   gap: var(--space-xxxl);
 }
 
-// ++++++++++++++++++++++++++
+// +++++++++++++++++
 // ++ DESIGN - IMAGE CARDS ++
-// ++++++++++++++++++++++++++
+// +++++++++++++++++
 
 .design {
 
@@ -165,6 +165,7 @@ main {
       }
     }
   }
+
 }
 
 
