--- a/main/assets/css/components/_image_card.scss
+++ b/main/assets/css/components/_image_card.scss
@@ -1,3 +1,7 @@
+// ++++++++++++++++++++
+// ++ IMAGE CARDS ++
+// ++++++++++++++++++++
+
 .image-card,
 .image-card::before {
   border-radius: var(--radius);
